--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
             <input name="senha" type="text" id="campo-senha">
         </div>
     </section>
-
-
+<div class="parametro">
+    
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Personalize sua senha</h4>
+    </div> 
+</div>
+</div> <h3 class="parametro-titulo">numero de caracteres</h3>           
+    </div>
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Características da senha</h4>
+    </div>
+    <div class="parametro-senha">
+        <h4 class="parametro-senha__titulo">Força da senha</h4>   
 </body>
 </html>
+    
+
 
 
 
